@@ -1,3 +1,8 @@
+2010-01-12  RD Schaffer  <R.D.Schaffer@cern.ch>
+
+        * Tag as TrigT1CaloMonitoring-00-06-10
+	* src/PPrMon.cxx (fillHistograms): fix for 64-bit id migration
+
 2009-12-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-06-09
         * Make jobOptions aware of processing step on Tier0.
